fix: dark mode toggle

--- a/proby/resources/css/app.css
+++ b/proby/resources/css/app.css
@@ -1,7 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.custom-text-left {
-    text-align: left !important;
-}
